# C-Interpreter

./: .gitignore  C.tab.h  CMakeLists.txt  Makefile  README.md  Results  TAC_OUT  arithmetic.c  arithmetic.h  bindings.c  conversions.c  environment.h  interpret.c  log.txt  main.c  make_many.sh  mycc  perf.data  prints.c  run.sh  runBasic.ps1  run_tests.sh  test.c  unitTests.ps1  value.c  value.h
Google_Tests/: CMakeLists.txt
Google_Tests/Test_Files/: loopIncrementFunction.txt
Google_Tests/interpreter/: interpreterTest.c
Lexer_Parser_Files/: C.flex  C.tab.c  C.tab.h  C.y  Makefile  lex.yy.c  nodes.c  nodes.h  symbol_table.c
TAC/: CMakeLists.txt  TAC.c  TAC.h  TAC_VALUE.h
TAC_tests/: addition  all_arithmetic  division  if_frame  if_statement  ifgtoreq  ifltoreq  informational_operators  main_return  mod  multiplication  return_greater  return_lesser  subtraction  variable_return
interpreter/: CMakeLists.txt  apply.c  arithmetic.c  arithmetic_tests.c  bindings.c  closures.c  conversions.c  debug.c  interpret.c  loadHeaders.c  prints.c  value.c
scenarios/: literal.txt  literal_add.txt  literal_comparison.txt
src/: CMakeLists.txt  main.c  main.h
src/TAC/: TAC.c  (+1 more)
testFiles/: cplusFunction.txt  factorialFunction.txt  test  twiceFunction.txt
tests/: CMakeLists.txt  addition  all_arithmetic  arithmetic_in_arguments  babooshka  builtin_print_int  builtin_print_string  builtin_read_int  builtin_read_string  cplus  cplus_in_main  division  factorial  factorial_in_main  function_declaration  function_definition_args  if_frame  if_statement  ifgtoreq  ifltoreq  informational_operators  lexical_definition  literal_arithmetic  literal_comparison  literal_return_constant  main_return  many_functions  mod  multiplication  return_function_return  return_greater  return_lesser  simple_arguments  simple_if_return  simple_main_return  simplest_simple  subtraction  tests.c  twice  twice_in_main  (+5 more)
(+58 files in other folders)
